2011-02-22       Gaius Mulley <gaius@gnu.org>

	* www/tools/texi2tr/src/outputdev.py:  added no_tag so
	  table elements can easily be added - fixes a bug
	  with enumerate.
	* gm2/www/tools/texi2tr/src/texi2tr.py:  fixed pushSpecifier
	  and fixed 'enum' with 'enumerate'.  Enumerations work
	  for integer and alphabetical values.

2011-02-19       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2spec.c:  ensure that the prev
	  value is reset before each include path is added.
	* gm2/examples/gravity/Makefile.in:  changed python version
	  and fixed exec prefix.

2011-02-18       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  changed node About to Overview.
	* gm2/www/tools/texi2tr/src:  added function index.

2011-02-17       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  many bug fixes to nodes.
	* gm2/www/tools/texi2tr:  added html, png subdirs.
	* gm2/www/tools/texi2tr/src:  many bug fixes applied.

2011-02-15       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  incorporated the contents of the
	  web page gm2/www/index.ms into gm2.texi.

2011-02-10       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  modified gm2.html rule.
	* gm2/gm2.texi:  changed Function Index to Indices.
	* gm2/examples/texi2tr/src/outputdev.py:  added
	  templatePath.
	* gm2/examples/texi2tr/src/texi2tr.py:  added
	  rootName, templatePath, baseName options.
	* gm2/www/Makefile.in:  new building instructions
	  for the web site now that texi2tr is useable.
	* gm2/www/index.ms:  minor changes.

2011-02-09       Gaius Mulley <gaius@gnu.org>

	* texi2tr is now able to translate the gm2.texi
	  into html.  First usable version.
	* gm2/examples/texi2tr/src/config.py:  many changes.
	* gm2/examples/texi2tr/src/outputdev.py:  many changes.
	* gm2/examples/texi2tr/src/navigate.py:  many changes.
	* gm2/examples/texi2tr/src/texi2tr.py:  many changes.

2011-02-04       Gaius Mulley <gaius@gnu.org>

	* gm2/examples/texi2tr:  new directory.
	* gm2/examples/texi2tr/src:  new directory.